--- a/CSS/Badge.css
+++ b/CSS/Badge.css
@@ -10,6 +10,6 @@ img{
     height: 55%;
     width:55%;
     object-fit: cover;
-    border:1rem solid #ff6614;
-    border-radius: .5rem;
+    border:.4rem solid #ff6614;
+    border-radius: .6rem;
 }
